--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ span{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 90vh;
+    height: 80vh;
     width: 90vw;
     margin: auto;
 }
@@ -77,8 +77,9 @@ button:hover {
 .card{
     background-color: #d6d6d6;
     position: absolute;
-    top: -50%;
-    left: 30%;
+    top: -1000%;
+    left: 50%;
+    transform: translateX(-50%);
     width: 50vw;
     height: 50vh;
     display: flex;
@@ -112,15 +113,15 @@ button:hover {
     .text {
         font-size: 2rem;
     }
+    .btn{
+        width: 50px;
+        height: 50px;
+        font-size: 1.8rem;
+    }
 }
 
 @media all and (max-width: 1100px) {
     .text {
-        font-size: 1.5rem;
-    }
-    button{
-        width: 40px;
-        height: 40px;
         font-size: 1.5rem;
     }
     .letters {
@@ -145,12 +146,6 @@ button:hover {
     img{
         width: 100%;
     }
-
-    button {
-        font-size: 1.2rem;
-        width: 35px;
-        height: 35px;
-    }
     .card{
         font-size: 1.8rem;
     }
@@ -158,19 +153,24 @@ button:hover {
     .card button{
         font-size: 1.5rem;
     }
+    .btn{
+        width: 40px;
+        height: 40px;
+        font-size: 1.3rem;
+    }
 }
 
 @media all and (max-width: 400px) {
-    button {
-        font-size: 1rem;
-        width: 30px;
-        height: 30px;
-    }
     .card{
         font-size: 1.4rem;
     }
     
     .card button{
         font-size: 1.2rem;
+    }
+    .btn{
+        width: 35px;
+        height: 35px;
+        font-size: 1rem;
     }
 }
